fix:changement de modles